--- a/metagen/pom.xml
+++ b/metagen/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>antlr4-runtime</artifactId>
       <version>4.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.yuvalshavit</groupId>
+      <artifactId>antlr-denter</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
